--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "gatsby-example",
   "version": "1.0.0",
   "license": "MIT",
-  "workspaces": [
-    "create-source"
-  ],
-  "private": true,
+  "dev": "./node_modules/.bin/gatsby develop",
+  "build": "./node_modules/.bin/gatsby build",
+  "scripts": {
+    "develop": "./node_modules/.bin/gatsby develop",
+    "build": "./node_modules/.bin/gatsby build"
+  },
   "devDependencies": {
     "axios": "^0.19.0",
     "gatsby-image": "^2.2.29",
@@ -18,6 +20,7 @@
   },
   "dependencies": {
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "gatsby": "^2.17.4"
   }
 }
